[workspace]
members = ["evenio_macros"]

[workspace.lints.rust]
missing_debug_implementations = "warn"
# missing_docs = "warn"
unreachable_pub = "warn"
# trivial_numeric_casts = "warn"
unused_lifetimes = "warn"
unused_import_braces = "warn"
rust_2018_idioms = "warn"
nonstandard_style = "warn"
future_incompatible = "warn"
elided_lifetimes_in_paths = "allow" # Warned by `future_incompatible`.

[workspace.lints.clippy]
dbg_macro = "warn"
undocumented_unsafe_blocks = "warn"
mod_module_files = "warn"
std_instead_of_core = "warn"
std_instead_of_alloc = "warn"

# Deny rustdoc stuff so CI fails.
# [workspace.lints.rustdoc]
# broken_intra_doc_links = "deny"
# private_intra_doc_links = "deny"
# missing_crate_level_docs = "deny"
# invalid_codeblock_attributes = "deny"
# invalid_rust_codeblocks = "deny"
# bare_urls = "deny"
# invalid_html_tags = "deny"

[package]
name = "evenio"
version = "0.1.0"
edition = "2021"

[features]
default = ["std"]
# rayon = ["std"]
std = []

[dependencies]
# ahash = "0.8.3"
bumpalo = "3.14.0"
evenio_macros = { path = "evenio_macros" }
memoffset = "0.9.0"
rayon = { version = "1.8.0", optional = true }
slab = "0.4.9"

[dev-dependencies]
divan = "0.1.2"

[lints]
workspace = true
