[package]
name = "evenio_macros"
version.workspace = true
description = "Procedural macros for `evenio`"
edition.workspace = true
repository.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.74"
quote = "1.0.33"
syn = "2.0.37"

[lints]
workspace = true
